@@ -1,3 +1,7 @@
+2010-02-05  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed bug #13422: Invalid quoting of numeric column names
+
 2010-02-03  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Added unit tests for bug #13412: BETWEEN operator is not supported
